# aoc2018

./: .editorconfig  CHANGELOG.md  LICENSE  README.md  aoc2018.cabal  cabal.project  hie.yaml
app/: Main.hs
src/: Aoc2018.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Lib.hs
