cabal-version:       2.4
name:                aoc2018
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See README.md for more details.
license:             MIT
license-file:        LICENSE
author:              Catac
maintainer:          Catac <catac@github.com>
copyright:           2021 Catac
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       GADTs
                       DataKinds
                       TypeOperators
                       FlexibleContexts
                       LambdaCase
                       BlockArguments
                       FlexibleInstances
                       MultiParamTypeClasses
                       DerivingStrategies

library
  import:              common-options
  hs-source-dirs:      src
  ghc-options:         -Wno-unused-imports -Wno-missing-export-lists -Wno-compat-unqualified-imports
  build-depends:       split
                     , containers
                     , vector
                     , directory
                     , filepath
                     , transformers
  exposed-modules:     Lib
                     , Day01

executable aoc2018
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc2018
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
